--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
 
     // Realizar as requisicoes
     compile 'com.squareup.retrofit:retrofit:1.9.0'
@@ -40,6 +41,7 @@ dependencies {
 
     // Lib de suporte para aplicacao, banco requisicoes e gui
     compile 'com.facebook.stetho:stetho:1.3.1'
+
 
 
 }
