--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,10 @@
         <activity android:name=".RegisterActivity" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main"
+            android:theme="@style/MeetStudentsTheme" />
+        <activity
+            android:name=".ChatActivity"
+            android:label="@string/title_activity_chat"
             android:theme="@style/MeetStudentsTheme"></activity>
     </application>
 
