--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile 'com.lorentzos.swipecards:library:1.0.9'
+
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
@@ -42,7 +45,6 @@ dependencies {
 
     // Lib de suporte para aplicacao, banco requisicoes e gui
     compile 'com.facebook.stetho:stetho:1.3.1'
-
 
 
 }
