--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,15 @@
 apply plugin: 'com.android.application'
 
+/* ORMLite */
+def ORMLite = '4.45';
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "br.com.meetstudents"
-        minSdkVersion 19
+        minSdkVersion 18
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -45,6 +48,10 @@ dependencies {
 
     // Lib de suporte para aplicacao, banco requisicoes e gui
     compile 'com.facebook.stetho:stetho:1.3.1'
+
+    /* ORM Lite */
+    compile "com.j256.ormlite:ormlite-android:$ORMLite"
+    compile "com.j256.ormlite:ormlite-core:$ORMLite"
 
 
 }
