--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -18,8 +17,6 @@
         android:supportsRtl="true"
         android:theme="@style/MeetStudentsTheme"
         tools:replace="android:icon">
-
-
         <activity android:name=".GuideActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,13 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
-
         <activity android:name=".RegisterActivity" />
-
         <activity
             android:name=".MainActivity"
             android:theme="@style/MeetStudentsTheme">
@@ -43,11 +37,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".ChatActivity"
+            android:name=".UsersMatchActivity"
             android:label="@string/title_activity_chat"
-            android:theme="@style/MeetStudentsTheme"></activity>
+            android:theme="@style/MeetStudentsTheme" />
+        <activity android:name=".ChatActivity"></activity>
     </application>
 
 </manifest>
